index.html file updated

--- a/index.html
+++ b/index.html
@@ -1,58 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Bootstrap demo</title>
+		<title>Bootstrap Store</title>
 		<link rel="stylesheet" href="styles/bootstrap.min.css" />
 		<link rel="stylesheet" href="styles/main.css" />
 	</head>
 	<body>
-		<!-- <h1>Hello, world!</h1>
-		<button type="button" class="btn btn-primary">primary</button>
-		<button type="button" class="btn btn-default">default</button>
-		<div class="header-container">
-			<h2>Animals pictures</h2>
-		</div>
-		<div class="container">
-			<img src="images/1.jpg" />
-			<img src="images/2.jpg" />
-			<img src="images/3.jpg" />
-			<img src="images/4.jpg" />
-			<img src="images/5.jpg" />
-			<img src="images/6.jpg" />
-		</div> -->
-		<div class="table-container">
-			<table class="table table-primary table-striped table-hover">
-				<thead>
-					<th>#</th>
-					<th>First Name</th>
-					<th>Last Name</th>
-					<th>User ID</th>
-				</thead>
-				<tbody>
-					<tr>
-						<td>1</td>
-						<td>Soheil</td>
-						<td>Shokouhi</td>
-						<td>@itssoheil1</td>
-					</tr>
-					<tr>
-						<td>2</td>
-						<td>Pouria</td>
-						<td>Ghafouri</td>
-						<td>@pgh1313</td>
-					</tr>
-					<tr>
-						<td>3</td>
-						<td>Benyamin</td>
-						<td>Dorostkar</td>
-						<td>@benben</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-
+		<nav></nav>
+		<main></main>
+		<footer></footer>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/bootstrap.bundle.min.js"></script>
 	</body>
