index file updated

--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
 		<link rel="stylesheet" href="styles/main.css" />
 	</head>
 	<body>
-		<nav></nav>
+		<nav>
+			<div class="dropdown">
+				<button
+					class="btn btn-secondary dropdown-toggle"
+					type="button"
+					id="dropdownMenuButton2"
+					data-bs-toggle="dropdown"
+					aria-expanded="false"
+				>
+					دسته بندی کالاها
+				</button>
+				<ul
+					class="dropdown-menu dropdown-menu-dark"
+					aria-labelledby="dropdownMenuButton2"
+				>
+					<li><a class="dropdown-item active" href="#">کالای دیجیتال</a></li>
+					<li><a class="dropdown-item" href="#">مد و پوشاک</a></li>
+					<li><a class="dropdown-item" href="#">زیبایی و سلامت</a></li>
+					<li><hr class="dropdown-divider" /></li>
+					<li><a class="dropdown-item" href="#">خانه و آشپزخانه</a></li>
+				</ul>
+			</div>
+		</nav>
 		<main></main>
 		<footer></footer>
 		<script src="js/bootstrap.min.js"></script>
